Add studies case storybook and translations validators

--- a/examples/theme/minimalist/Field/TextField/styles.scss
+++ b/examples/theme/minimalist/Field/TextField/styles.scss
@@ -17,4 +17,9 @@
       border-color: red;
     }
   }
+  &.success {
+    .minimalist-field__text-type {
+      border-color: green;
+    }
+  }
 }
