--- a/examples/theme/minimalist/Field/styles.scss
+++ b/examples/theme/minimalist/Field/styles.scss
@@ -1,3 +1,11 @@
+.minimalist-field-group {
+    display: flex;
+    .minimalist-field {
+        flex: 1;
+        margin: 0.5rem;
+    }
+}
+
 .minimalist-field {
     margin-bottom: 1rem;
 }
